feat: Photos on landingpage

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,9 @@ body {
   color: var(--foreground);
   font-family: "Inter", sans-serif;
 }
+* {
+  scroll-behavior: smooth;
+}
 *::-webkit-scrollbar {
   display: none;
 }
